2012-11-22  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/generic/unwind-dw2-fde-glibc.c
	(_Unwind_IteratePhdrCallback): Declare P_DYNAMIC with
	__attribute__ ((unused)).

	[BZ #14645]
	* sysdeps/ieee754/ldbl-128ibm/s_fmal.c (__fmal): Compute result as
	x * y if x and y are nonzero and z is zero.

	[BZ #14811]
	* sysdeps/ieee754/ldbl-128ibm/e_powl.c (__ieee754_powl): Saturate
	nonzero exponents with absolute value below 0x1p-117 to +/-
	0x1p-117.

	[BZ #14869]
	* sysdeps/ieee754/ldbl-128ibm/e_hypotl.c (__ieee754_hypotl): Scale
	up arguments below 2**-450, not just those below 2**-500.
	* math/libm-test.inc (hypot_test): Add another test.

	[BZ #14868]
	* sysdeps/ieee754/ldbl-128ibm/e_hypotl.c (__ieee754_hypotl):
	Return a+b for ratio over 2**120, not 2**60.
	* math/libm-test.inc (hypot_test): Add another test.

	* math/libm-test.inc (clog_test): Use
	UNDERFLOW_EXCEPTION_LDOUBLE_IBM on two tests.
	(clog10_test): Likewise.

	[BZ #6778]
	* sysdeps/ieee754/ldbl-128ibm/s_expm1l.c (big): Change to 1e290L.

2012-11-22  Andreas Schwab  <schwab@suse.de>

	* sysdeps/i386/fpu/libm-test-ulps: Update.

2012-11-22  Pino Toscano  <toscano.pino@tiscali.it>

	* sysdeps/x86_64/multiarch/test-multiarch.c (get_cpuinfo): Terminate
	printf output with newline.

2012-11-21  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14865]
	* aclocal.m4 (LIBC_LINKER_FEATURE): New macro.
	* configure.in: Use LIBC_LINKER_FEATURE to check -z nodelete,
	-z nodlopen, -z initfirst and -z execstack support.
	* configure: Regenerated.

	* elf/elf.h (DF_1_NODIRECT): New macro.
	(DF_1_IGNMULDEF): Likewise.
	(DF_1_NOKSYMS): Likewise.
	(DF_1_NOHDR): Likewise.
	(DF_1_EDITED): Likewise.
	(DF_1_NORELOC): Likewise.
	(DF_1_SYMINTPOSE): Likewise.
	(DF_1_GLOBAUDIT): Likewise.
	(DF_1_SINGLETON): Likewise.
	* elf/get-dynamic-info.h (elf_get_dynamic_info): Assert
	DT_1_SUPPORTED_MASK bits.
	* include/elf.h (DT_1_SUPPORTED_MASK): New macro.

2012-11-20  Carlos O'Donell  <carlos_odonell@mentor.com>
